--- a/arch/arm/boot/dts/exynos4412-n8000.dts
+++ b/arch/arm/boot/dts/exynos4412-n8000.dts
@@ -33,7 +33,7 @@
 
 	chosen {
 		// tty0 for the display and serial output via ttyS2 for early console and ttySAC2 for normal console
-		bootargs = "root=/dev/mmcblk2p9 rw loglevel=8 lpj=3981312 vmalloc=256m oops=panic consoleblank=0 earlyprintk init=/linuxrc console=ttySAC2 console=tty0";
+		bootargs = "root=/dev/mmcblk2p9 rw loglevel=8 lpj=3981312 vmalloc=256m oops=panic consoleblank=0 earlyprintk init=/init console=ttySAC2 androidboot.selinux=permissive androidboot.hardware=p4note";
 		stdout-path = "serial2:115200n8";
 	};
 
@@ -483,6 +483,16 @@
 	compatible = "samsung,exynos4210-pmu", "syscon", "simple-mfd";
 	assigned-clocks = <&pmu_system_controller 0>;
 	assigned-clock-parents =  <&clock CLK_XUSBXTI>;
+
+	reboot-mode {
+		compatible = "syscon-reboot-mode";
+		offset = <0x80c>;
+
+		mode-normal = <0x12345670>;
+		mode-bootloader = <0x12345671>;
+		mode-download = <0x12345671>;
+		mode-recovery = <0x12345674>;
+	};
 };
 
 
@@ -872,6 +882,24 @@
 	status = "okay";
 };
 
+// internal memory
+&mshc_0 {
+	broken-cd;
+	non-removable;
+	card-detect-delay = <200>;
+	clock-frequency = <400000000>;
+	samsung,dw-mshc-ciu-div = <0>;
+	samsung,dw-mshc-sdr-timing = <2 3>;
+	samsung,dw-mshc-ddr-timing = <1 2>;
+	pinctrl-0 = <&sd4_clk &sd4_cmd &sd4_bus4 &sd4_bus8>;
+	pinctrl-names = "default";
+	status = "okay";
+	bus-width = <4>;
+	cap-mmc-highspeed;
+	cap-sd-highspeed;
+};
+
+// sdcard
 &sdhci_3 {
 	#address-cells = <1>;
 	#size-cells = <0>;
@@ -890,22 +918,6 @@
 		interrupts = <5 IRQ_TYPE_LEVEL_HIGH>;
 		interrupt-names = "host-wake";
 	};
-};
-
-&mshc_0 {
-	broken-cd;
-	non-removable;
-	card-detect-delay = <200>;
-	clock-frequency = <400000000>;
-	samsung,dw-mshc-ciu-div = <0>;
-	samsung,dw-mshc-sdr-timing = <2 3>;
-	samsung,dw-mshc-ddr-timing = <1 2>;
-	pinctrl-0 = <&sd4_clk &sd4_cmd &sd4_bus4 &sd4_bus8>;
-	pinctrl-names = "default";
-	status = "okay";
-	bus-width = <4>;
-	cap-mmc-highspeed;
-	cap-sd-highspeed;
 };
 
 &pinctrl_0 {
