--- a/arch/arm/boot/dts/exynos4412-n8000.dts
+++ b/arch/arm/boot/dts/exynos4412-n8000.dts
@@ -32,8 +32,7 @@
 	};
 
 	chosen {
-		// tty0 for the display and serial output via ttyS2 for early console and ttySAC2 for normal console
-		bootargs = "root=/dev/mmcblk2p9 rw loglevel=8 lpj=3981312 vmalloc=256m oops=panic consoleblank=0 earlyprintk init=/init console=ttySAC2 androidboot.selinux=permissive androidboot.hardware=p4note";
+		bootargs = "root=/dev/mmcblk2p9 rw earlyprintk init=/init androidboot.selinux=permissive androidboot.console=ttySAC2";
 		stdout-path = "serial2:115200n8";
 	};
 
@@ -295,7 +294,6 @@
 	};
 	*/
 
-	/*
 	wm1811_n8000: sound {
 		compatible = "samsung,midas-audio";
 		model = "WM1811 @ N8000";
@@ -337,7 +335,6 @@
 			"IN2RN", "Third Mic",
 			"IN2RP:VXRP", "Third Mic";
 	};
-	*/
 
 };
 
@@ -419,6 +416,7 @@
 };
 
 &hsotg {
+	vusb_a-supply = <&ldo12_reg>;
 	dr_mode = "peripheral";
 	status = "okay";
 };
@@ -431,6 +429,20 @@
 	samsung,esc-clock-frequency = <20000000>;
 	samsung,pll-clock-frequency = <24000000>;
 	status = "okay";
+	ports {
+		#address-cells = <1>;
+		#size-cells = <0>;
+
+		port@1 {
+			reg = <1>;
+
+			dsi_out: endpoint@0 {
+				status = "okay";
+			};
+
+		};
+
+	};
 };
 
 &fimc_0 {
@@ -558,6 +570,8 @@
 	samsung,i2c-sda-delay = <100>;
 	samsung,i2c-slave-addr = <0x10>;
 	samsung,i2c-max-bus-freq = <100000>;
+	pinctrl-0 = <&i2c4_bus>;
+	pinctrl-names = "default";
 	status = "okay";
 
 	wm1811: wm1811@1a {
