--- a/arch/arm/configs/n8000_defconfig
+++ b/arch/arm/configs/n8000_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 5.4.6 Kernel Configuration
+# Linux/arm 5.4.17 Kernel Configuration
 #
 
 #
@@ -674,6 +674,7 @@ CONFIG_HAVE_ARCH_MMAP_RND_BITS=y
 CONFIG_HAVE_EXIT_THREAD=y
 CONFIG_ARCH_MMAP_RND_BITS=8
 CONFIG_ARCH_WANT_DEFAULT_TOPDOWN_MMAP_LAYOUT=y
+CONFIG_HAVE_COPY_THREAD_TLS=y
 CONFIG_CLONE_BACKWARDS=y
 CONFIG_OLD_SIGSUSPEND3=y
 CONFIG_OLD_SIGACTION=y
@@ -772,6 +773,8 @@ CONFIG_RWSEM_SPIN_ON_OWNER=y
 CONFIG_LOCK_SPIN_ON_OWNER=y
 # CONFIG_GKI_HIDDEN_DRM_CONFIGS is not set
 # CONFIG_GKI_HIDDEN_REGMAP_CONFIGS is not set
+# CONFIG_GKI_HIDDEN_CRYPTO_CONFIGS is not set
+# CONFIG_GKI_HIDDEN_SND_CONFIGS is not set
 # CONFIG_GKI_HIDDEN_SND_SOC_CONFIGS is not set
 # CONFIG_GKI_HIDDEN_MMC_CONFIGS is not set
 # CONFIG_GKI_HIDDEN_GPIO_CONFIGS is not set
@@ -2913,7 +2916,7 @@ CONFIG_DRM_FBDEV_OVERALLOC=100
 # CONFIG_DRM_FBDEV_LEAK_PHYS_SMEM is not set
 # CONFIG_DRM_LOAD_EDID_FIRMWARE is not set
 # CONFIG_DRM_DP_CEC is not set
-CONFIG_DRM_SCHED=m
+CONFIG_DRM_SCHED=y
 
 #
 # I2C encoder or helper chips
@@ -2961,11 +2964,11 @@ CONFIG_DRM_EXYNOS_HDMI=y
 #
 # Sub-drivers
 #
-# CONFIG_DRM_EXYNOS_G2D is not set
+CONFIG_DRM_EXYNOS_G2D=y
 CONFIG_DRM_EXYNOS_IPP=y
 CONFIG_DRM_EXYNOS_FIMC=y
-# CONFIG_DRM_EXYNOS_ROTATOR is not set
-# CONFIG_DRM_EXYNOS_SCALER is not set
+CONFIG_DRM_EXYNOS_ROTATOR=y
+CONFIG_DRM_EXYNOS_SCALER=y
 # CONFIG_DRM_UDL is not set
 # CONFIG_DRM_ARMADA is not set
 # CONFIG_DRM_RCAR_DW_HDMI is not set
@@ -3029,15 +3032,16 @@ CONFIG_DRM_PANEL_BRIDGE=y
 # CONFIG_DRM_ANALOGIX_ANX78XX is not set
 # CONFIG_DRM_CDNS_DSI is not set
 # CONFIG_DRM_DUMB_VGA_DAC is not set
+# CONFIG_DRM_LONTIUM_LT9611 is not set
 # CONFIG_DRM_LVDS_ENCODER is not set
 # CONFIG_DRM_MEGACHIPS_STDPXXXX_GE_B850V3_FW is not set
-CONFIG_DRM_NXP_PTN3460=y
-CONFIG_DRM_PARADE_PS8622=y
+# CONFIG_DRM_NXP_PTN3460 is not set
+# CONFIG_DRM_PARADE_PS8622 is not set
 # CONFIG_DRM_SIL_SII8620 is not set
 # CONFIG_DRM_SII902X is not set
-CONFIG_DRM_SII9234=y
+# CONFIG_DRM_SII9234 is not set
 # CONFIG_DRM_THINE_THC63LVD1024 is not set
-CONFIG_DRM_TOSHIBA_TC358764=y
+# CONFIG_DRM_TOSHIBA_TC358764 is not set
 # CONFIG_DRM_TOSHIBA_TC358767 is not set
 # CONFIG_DRM_TI_TFP410 is not set
 # CONFIG_DRM_TI_SN65DSI86 is not set
@@ -3059,7 +3063,7 @@ CONFIG_DRM_ANALOGIX_DP=y
 # CONFIG_TINYDRM_ST7735R is not set
 # CONFIG_DRM_PL111 is not set
 # CONFIG_DRM_TVE200 is not set
-CONFIG_DRM_LIMA=m
+CONFIG_DRM_LIMA=y
 # CONFIG_DRM_PANFROST is not set
 # CONFIG_DRM_MCDE is not set
 # CONFIG_DRM_LEGACY is not set
@@ -3669,7 +3673,6 @@ CONFIG_USB_CONFIGFS_MASS_STORAGE=y
 # CONFIG_USB_CONFIGFS_F_HID is not set
 # CONFIG_USB_CONFIGFS_F_UVC is not set
 # CONFIG_USB_CONFIGFS_F_PRINTER is not set
-# CONFIG_USB_ZERO is not set
 # CONFIG_TYPEC is not set
 # CONFIG_USB_ROLE_SWITCH is not set
 CONFIG_MMC=y
@@ -4778,6 +4781,7 @@ CONFIG_FUSE_FS=y
 # CONFIG_CUSE is not set
 # CONFIG_VIRTIO_FS is not set
 # CONFIG_OVERLAY_FS is not set
+# CONFIG_INCREMENTAL_FS is not set
 
 #
 # Caches
@@ -4926,7 +4930,6 @@ CONFIG_KEYS=y
 # CONFIG_ENCRYPTED_KEYS is not set
 # CONFIG_KEY_DH_OPERATIONS is not set
 # CONFIG_SECURITY_DMESG_RESTRICT is not set
-# CONFIG_SECURITY_PERF_EVENTS_RESTRICT is not set
 CONFIG_SECURITY=y
 # CONFIG_SECURITYFS is not set
 CONFIG_SECURITY_NETWORK=y
@@ -4943,6 +4946,7 @@ CONFIG_SECURITY_SELINUX=y
 CONFIG_SECURITY_SELINUX_DEVELOP=y
 CONFIG_SECURITY_SELINUX_AVC_STATS=y
 CONFIG_SECURITY_SELINUX_CHECKREQPROT_VALUE=0
+CONFIG_SECURITY_SELINUX_SIDTAB_HASH_BITS=9
 # CONFIG_SECURITY_SMACK is not set
 # CONFIG_SECURITY_TOMOYO is not set
 # CONFIG_SECURITY_APPARMOR is not set
