--- a/arch/arm/configs/n8000_defconfig
+++ b/arch/arm/configs/n8000_defconfig
@@ -3220,6 +3220,7 @@ CONFIG_SND_SAMSUNG_I2S=y
 # CONFIG_SND_SOC_SNOW is not set
 # CONFIG_SND_SOC_ODROID is not set
 # CONFIG_SND_SOC_ARNDALE_RT5631_ALC5631 is not set
+CONFIG_SND_SOC_SAMSUNG_MIDAS_WM1811=y
 # CONFIG_SND_SOC_SOF_TOPLEVEL is not set
 
 #
@@ -3237,6 +3238,7 @@ CONFIG_SND_SOC_I2C_AND_SPI=y
 #
 # CODEC drivers
 #
+CONFIG_SND_SOC_WM_HUBS=y
 # CONFIG_SND_SOC_AC97_CODEC is not set
 # CONFIG_SND_SOC_ADAU1701 is not set
 # CONFIG_SND_SOC_ADAU1761_I2C is not set
@@ -3357,6 +3359,7 @@ CONFIG_SND_SOC_HDMI_CODEC=y
 # CONFIG_SND_SOC_WM8974 is not set
 # CONFIG_SND_SOC_WM8978 is not set
 # CONFIG_SND_SOC_WM8985 is not set
+CONFIG_SND_SOC_WM8994=y
 # CONFIG_SND_SOC_ZX_AUD96P22 is not set
 # CONFIG_SND_SOC_MAX9759 is not set
 # CONFIG_SND_SOC_MT6351 is not set
