--- a/arch/arm/configs/n8000_defconfig
+++ b/arch/arm/configs/n8000_defconfig
@@ -3103,6 +3103,7 @@ CONFIG_LCD_CLASS_DEVICE=y
 # CONFIG_LCD_ILI9320 is not set
 # CONFIG_LCD_TDO24M is not set
 # CONFIG_LCD_VGG2432A4 is not set
+CONFIG_LCD_S6C1372=y
 CONFIG_LCD_PLATFORM=y
 # CONFIG_LCD_AMS369FG06 is not set
 # CONFIG_LCD_LMS501KF03 is not set
