--- a/arch/arm/configs/n8000_defconfig
+++ b/arch/arm/configs/n8000_defconfig
@@ -4187,6 +4187,8 @@ CONFIG_ION_SYSTEM_HEAP=y
 # CONFIG_UWB is not set
 # CONFIG_STAGING_EXFAT_FS is not set
 # CONFIG_WFX is not set
+CONFIG_P4NOTE=y
+# CONFIG_SEC_P4NOTE_SWITCH is not set
 # CONFIG_GOLDFISH is not set
 CONFIG_MFD_CROS_EC=y
 CONFIG_CHROME_PLATFORMS=y
